@@ -1,3 +1,9 @@
+2011-09-12  Nick Alcock  <nick.alcock@oracle.com>
+
+	* runtest.sh: Introduce quiet mode, producing minimal output.
+	* GNUmakefile (check): Run tests in quiet mode.
+	(check-verbose): New target providing verbose testing.
+
 2011-09-09  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Stop @@xfail from hanging runtest. Strip trailing
